add bug model and views tests

--- a/templates/bug/bug-detail.html
+++ b/templates/bug/bug-detail.html
@@ -28,7 +28,7 @@
                                                     <!-- 'Close' button with a link to the home page -->
 
                         <div style="text-align: center; ">
-                            <a class="btn btn-primary deep-purple darken-1" href="/" style="margin-bottom:30px;margin-top: 70px;">Close</a>
+                            <a class="btn btn-primary deep-purple darken-1" href="/bug/all_bugs" style="margin-bottom:30px;margin-top: 70px;">Close</a>
                         </div>
                     </div>
 
