--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -17,10 +17,10 @@
   <!-- Navigation Bar -->
   <nav class="deep-purple darken-1">
     <div class="nav-wrapper container">
-      <a href="/" class="brand-logo center-align">Bug App</a>
+      <a href="/bug/all_bugs" class="brand-logo center-align">Bug App</a>
       <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/">All bugs</a></li>
+        <li><a href="/bug/all_bugs">All bugs</a></li>
         <li><a href="/bug/add_bug">Report a bug</a></li>
       </ul>
     </div>
@@ -28,7 +28,7 @@
 
   <!-- Side Navigation (Mobile) -->
   <ul id="slide-out" class="side-nav deep-purple darken-1 ">
-    <li><a href="/">All Bugs</a></li>
+    <li><a href="/bug/all_bugs">All Bugs</a></li>
     <li><a href="/bug/add_bug">Report a bug</a></li>
   </ul>
 
